k8s-istio-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: hello-ingress
  namespace: hello
spec:
  rules:
  - host: python.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: hello-py-service
          servicePort: 3333

---
apiVersion: v1
kind: Pod
metadata:
  name: hello-py-pod
  namespace: hello
  labels:
    app: hello-py-pod
spec:
  containers:
  - name: hello-pod
    image: ratulb/hello-py-pod:0.0.1

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-py-service
  name: hello-py-service
  namespace: hello
spec:
  ports:
  - port: 3333
    protocol: TCP
    targetPort: 3333
  selector:
    app: hello-py-pod
